# agent-design-patterns

./: .env.example  .gitignore  README.md  README.zh-CN.md  REFERENCE_IMPL.md  model_config.py  nbtools.py  pyproject.toml
.github/workflows/: test.yml
action/: ACTION_MODULE_DEMO.zh-CN.md
action/c-prompt-chaining/: README.md  README.zh-CN.md  pattern.py  shared.py  test_pattern.py
action/d-guardrail-sandwich/: README.md  README.zh-CN.md  hooks.py  pattern.py  shared.py  test_pattern.py
action/payroll-lab/: README.md  README.zh-CN.md  action_trace.py  db.py  guardrail_lab.py  prompt_chain_lab.py  run_action_module.py  stress_ablation.py  stress_full.py  stress_gaps.py  stress_vectors.py  stress_web_run.py  test_stress_lab.py  test_ui_service.py  ui_service.py  web_app.py
collaboration/: boundary_contract.py  stress_collab_gaps.py  test_boundary_contract.py
collaboration/a-hierarchical-delegation/: README.md  README.zh-CN.md  example.py  pattern.py  test_pattern.py
collaboration/b-fan-out-gather/: README.md  README.zh-CN.md  example.py  pattern.py  test_pattern.py
collaboration/c-adversarial-review/: README.md  README.zh-CN.md  example.py  pattern.py  test_pattern.py
collaboration/d-handoff-chain/: README.md  README.zh-CN.md  example.py  pattern.py  test_pattern.py
collaboration/payroll-lab/: adversarial_review_lab.py  delegation_boundary_lab.py  fan_out_gather_lab.py  handoff_chain_lab.py  test_adversarial_review_lab.py  test_delegation_boundary_lab.py  (+2 more)
composition/: stress_compose.py
docs/: INTERFACE-REGISTRY.md  add_watermark.py  gen_interface_registry.py  render_matrix.py
governance/: boundary_contract.py  test_boundary_contract.py
(+109 files in other folders)
