[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-design-patterns"
version = "0.1.0"
description = "Companion code for the Agent Design Patterns column and book by Jia Huang"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jia Huang", email = "tohuangjia@gmail.com" }]
keywords = ["agent", "llm", "design-patterns", "ai-engineering"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
langgraph = [
  "langchain>=1.0,<2",
  "langchain-core>=1.0,<2",
  "langgraph>=1.0,<2",
  "langchain-openai>=1.0,<2",
  "langchain-anthropic>=1.0,<2",
  "langchain-oceanbase>=0.5.1",
  "langchain-dev-utils>=1.4.6",
  "python-dotenv>=1.0",
  "grandalf>=0.8",          # offline ASCII graph rendering (draw_ascii fallback)
]
dev = [
  "pytest>=8.0",
  "nbmake>=1.5",
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
  "ruff>=0.5",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["perception", "memory", "reasoning", "action", "reflection", "collaboration", "governance", "composition"]
python_files = "test_*.py"
python_functions = "test_*"
# importlib mode lets sibling folders each have their own test_pattern.py
# without module-name collisions during collection.
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py311"
